# eustace-ambitious

./: LICENSE.txt  README.md  config.cfg
src/: CMakeLists.txt
src/ambitious/: CMakeLists.txt  Doxyfile.in
src/ambitious/bidirmap/: bidirmap.hpp
src/ambitious/blocks/: blocks.cpp  blocks.hpp
src/ambitious/debuglog/: debuglog.cpp  debuglog.hpp
src/ambitious/informal/: CMakeLists.txt  build_bilevel_meshes.cpp  cal.cpp  commandline_demo.cpp  meta_data_in_input.cpp  modelscan.cpp  obs.cpp  qtool_timing.cpp  qtool_timing_Q_blocks.cpp  read_one_day_test.cpp
src/ambitious/meshes/: meshes.cpp  meshes.hpp  span.hpp
src/ambitious/ncdf/: ncdf.hpp  ncdf_eigen.hpp  ncdf_helper.cpp  ncdf_helper.hpp
src/ambitious/observe/: observe.cpp  observe.hpp
src/ambitious/ostreamer/: ostreamer.hpp
src/ambitious/po/: po.cpp  po.hpp
src/ambitious/po_tool/: po_tool.cpp  po_tool.hpp
src/ambitious/poq/: poq.hpp
src/ambitious/qtool/: qtool.hpp
src/ambitious/rarandom/: rarandom.hpp
src/ambitious/test/: CMakeLists.txt  TestBidirmap.cpp  TestBlocks.cpp  TestMeshes.cpp  TestNCDFScaling.cpp  TestPoTool.cpp  TestPoq.cpp  TestQtool.cpp  TestTimer.cpp  main.cpp
src/ambitious/timer/: timer.cpp  timer.hpp
src/ambitious/to_string/: to_string.hpp
src/ambitious/versions/: versions.cpp  versions.hpp
src/eustace/: CMakeLists.txt  definitions.cpp  definitions.h
src/eustace/analysis/: inputmanager.cpp  inputmanager.h  observationsource.cpp  observationsource.h
src/eustace/analysis/break_points/: break_points.cpp  break_points.h  insitu_land_break_points.cpp  insitu_land_break_points.h
src/eustace/analysis/fileio/: .dir-locals.el  locationpointers.cpp  locationpointers.h  mesh.cpp  mesh.h  rawbinary.cpp  rawbinary.h
src/eustace/examples/: CMakeLists.txt
src/eustace/examples/example_analysis_input/: CMakeLists.txt  example_analysis_input.cpp
src/eustace/examples/example_break_points/: CMakeLists.txt  example_break_points.cpp
src/eustace/examples/example_mesh_load/: CMakeLists.txt  example_mesh_load.cpp
src/eustace/examples/helloworld/: helloworld  helloworld.cpp
src/eustace/test/: CMakeLists.txt  TestAnalysisInput.cpp  TestAnalysisInputManager.cpp  TestBreakPointsReader.cpp  TestCalendarDay.cpp  TestLocalCorrelationRangeRawBinaryReader.cpp  TestLocationLookupRawBinaryReader.cpp  TestLocationPointers.cpp  TestMeshReader.cpp  TestObservationBreakingPoints.cpp  TestObservationIterator.cpp  TestObservationRawBinaryReader.cpp  TestTimeBaseDays.cpp  main.cpp
src/eustace/test/data/: eustace_mesh_level0.nc
src/eustace/timeutils/: timebase.cpp  timebase.h
src/fmesher/: CMakeLists.txt  README
src/fmesher/src/: Makefile  fmesher_debuglog.hh  mesh.cc  treetest.cc
src/fmesher/src/.deps/: basis.d  cmdline.d  dependencies.d  fmesher.d  ioutils.d  locator.d  mesh.d  meshc.d  predicates.d  trees.d  vector.d  x11utils.d  xtmpl.d
